--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@ionic/react": "^7.7.3",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.0",
     "ionicons": "^7.2.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
