--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.0",
     "ionicons": "^7.2.2",
     "next": "14.1.0",
-    "next-auth": "^4.24.6",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
     "use-debounce": "^10.0.0",
