--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@ionic/react": "^7.7.3",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "ionicons": "^7.2.2",
@@ -18,8 +19,10 @@
     "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
